--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,43 @@
+aiogram==2.25.1
+aiohttp==3.8.4
+aiosignal==1.3.1
+amqp==5.1.1
 anyio==3.6.2
+async-timeout==4.0.2
+attrs==22.2.0
+Babel==2.9.1
+billiard==3.6.4.0
+celery==5.2.7
 certifi==2022.12.7
+charset-normalizer==3.0.1
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+flower==1.2.0
+frozenlist==1.3.3
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
 httpcore==0.16.3
 httpx==0.23.3
+humanize==4.6.0
 hyperframe==6.0.1
 idna==3.4
+kombu==5.2.4
+loguru==0.6.0
+magic-filter==1.0.9
+multidict==6.0.4
+prometheus-client==0.16.0
+prompt-toolkit==3.0.37
 python-dotenv==0.21.1
 python-telegram-bot==20.1
+pytz==2022.7.1
+redis==4.5.1
 rfc3986==1.5.0
+six==1.16.0
 sniffio==1.3.0
+tornado==6.2
+vine==5.0.0
+wcwidth==0.2.6
+yarl==1.8.2
